Adjusted nav bar spacing, project links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <p>UX Designer who enjoys creating responsive mobile experiences. Aspires to help improve people's lives by making day to day tasks more efficient and enjoyable.</p>
                 <button> Download Resume</button>
             </div>
-
         </section>
+        
         <!-- Ux Skills section coded using CSS Flex -->
         <section class="mySkills">
             <h1> My UX Skills</h1>
@@ -97,9 +97,9 @@
                     <div id="tabs-1">
                       <h2>Prototype Links</h2>
                       <br></br>
-                      <a href="https://www.figma.com/proto/ZnnMgldFKR1QhPPOsymbVt/Week-2-Prototyping?page-id=158%3A1181&node-id=174%3A487&viewport=503%2C463%2C0.2614574134349823&scaling=scale-down"> Mobile Prototype</a>
+                      <a id="proto" href="https://www.figma.com/proto/ZnnMgldFKR1QhPPOsymbVt/Week-2-Prototyping?page-id=158%3A1181&node-id=174%3A487&viewport=503%2C463%2C0.2614574134349823&scaling=scale-down"> Mobile Prototype</a>
                       <br></br>
-                      <a href="https://www.figma.com/proto/ZnnMgldFKR1QhPPOsymbVt/Week-2---Prototyping?page-id=158%3A1180&node-id=212%3A600&viewport=1356%2C137%2C0.36396893858909607&scaling=min-zoom">Desktop Prototype</a>
+                      <a id="proto" href="https://www.figma.com/proto/ZnnMgldFKR1QhPPOsymbVt/Week-2---Prototyping?page-id=158%3A1180&node-id=212%3A600&viewport=1356%2C137%2C0.36396893858909607&scaling=min-zoom">Desktop Prototype</a>
                       <br></br>  <br></br>
                       <button> View Project</button>
                     </div>
@@ -122,9 +122,9 @@
                     <div id="tabs-1">
                       <h2>Prototype Links</h2>
                       <br></br>
-                      <a href="https://www.figma.com/proto/CpphBstHktrkCn3kfOMjXy/Hi-Fi-Prototype?page-id=143%3A960&node-id=503%3A14290&viewport=-7%2C1344%2C0.30683866143226624&scaling=scale-down"> Final Version</a>
+                      <a id="proto" href="https://www.figma.com/proto/CpphBstHktrkCn3kfOMjXy/Hi-Fi-Prototype?page-id=143%3A960&node-id=503%3A14290&viewport=-7%2C1344%2C0.30683866143226624&scaling=scale-down"> Final Version</a>
                       <br></br>
-                      <a href="https://www.figma.com/proto/kkD6s4g0RBsQ6wjREXWCzN/Curbside-Pickup-App?page-id=143%3A960&node-id=151%3A1612&viewport=1095%2C631%2C0.13441161811351776&scaling=scale-down">Mid-Fidelity Prototype</a>
+                      <a id="proto" href="https://www.figma.com/proto/kkD6s4g0RBsQ6wjREXWCzN/Curbside-Pickup-App?page-id=143%3A960&node-id=151%3A1612&viewport=1095%2C631%2C0.13441161811351776&scaling=scale-down">Mid-Fidelity Prototype</a>
                       <br></br>  <br></br>
                       <button> View Project</button>
                     </div>
