Changed Contact to Contact Me in the nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li class="inline_block"> About</li>
                     <li class="inline_block"> Skills</li>
                     <li class="inline_block"> Work</li>
-                    <li class="inline_block"> Contact</li>
+                    <li class="inline_block"> Contact Me</li>
                 </ul>
             </nav>
             <div class="inline_block logo">
