Web Project Link added

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                       <br></br>
                       <a id="proto" href="https://www.figma.com/proto/ZnnMgldFKR1QhPPOsymbVt/Week-2---Prototyping?page-id=158%3A1180&node-id=212%3A600&viewport=1356%2C137%2C0.36396893858909607&scaling=min-zoom">Desktop Prototype</a>
                       <br></br>  <br></br>
-                      <button> View Project</button>
+                      <a href="https://guannan-kwok.github.io/UX_UI_HW_20/" class="button">View Project</a>
                     </div>
                     <div id="tabs-2">
-                      <p>Responsive Website Design for desktop and mobile. Focus on improving content organization.</p>
-                      <button> View Project</button>
+                      <p>Responsive Website Design for desktop and mobile. Focus on improving content organization.</p> <br> <br>
+                      <a href="https://guannan-kwok.github.io/UX_UI_HW_20/" class="button">View Project</a>
                     </div>
                 </div>
                 
@@ -126,11 +126,11 @@
                       <br></br>
                       <a id="proto" href="https://www.figma.com/proto/kkD6s4g0RBsQ6wjREXWCzN/Curbside-Pickup-App?page-id=143%3A960&node-id=151%3A1612&viewport=1095%2C631%2C0.13441161811351776&scaling=scale-down">Mid-Fidelity Prototype</a>
                       <br></br>  <br></br>
-                      <button> View Project</button>
+                      <a href="" class="button">View Project</a>
                     </div>
                     <div id="tabs-2">
-                      <p>A pickup app that simplifies the pickup process as current processes are different for every retailer.</p>
-                      <button> View Project</button>
+                      <p>A pickup app that simplifies the pickup process as current processes are different for every retailer.</p> <br> <br>
+                      <a href="" class="button">View Project</a>
                     </div>
                 </div>
             </div>
